Fix vertical side buttons layout issues

--- a/languages/html5/scss/ga-bootstrap-footer.scss
+++ b/languages/html5/scss/ga-bootstrap-footer.scss
@@ -40,6 +40,7 @@
   right: 0px;
   display: inline-block;
   top: 50%;
+  z-index: 1;
 }
 
 $ga-vertical-buttons-translatex: 16px;
